--- a/index.html
+++ b/index.html
@@ -23,30 +23,30 @@
 <!--Nav-->
 <div class="container my-2 px-5">
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
-        <div class="container">
-            <a class="navbar-brand" href="#"><img src="assets/img/viajes.svg" alt="Logo de Viajes" class="Logo"><span class="viajeschile-nav"> VIAJES CHILE</span></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link text-light" href="#inicio">Inicio <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-light" href="#quienes-somos">Quiénes somos</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-light" href="#destacados">Destacados</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-light" href="#contacto">Contacto</a>
-          </li>
-        </ul>
-      </div>
- </div>
- </div>
-</nav>
+      <div class="container">
+              <a class="navbar-brand" href="#"><img src="assets/img/viajes.svg" alt="Logo de Viajes" class="Logo"><span class="viajeschile-nav"> VIAJES CHILE</span></a>
+         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+           <span class="navbar-toggler-icon"></span>
+         </button>
+         <div class="collapse navbar-collapse" id="navbarNav">
+           <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                <a class="nav-link text-light" href="#inicio">Inicio <span class="sr-only">(current)</span></a>
+              </li>
+               <li class="nav-item">
+                <a class="nav-link text-light" href="#quienes-somos">Quiénes somos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-light" href="#destacados">Destacados</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-light" href="#contacto">Contacto</a>
+              </li>
+           </ul>
+         </div>
+       </div>
+    </nav>
+</div>
 
 <!--Carrusel-->
   <div id="carouselExampleControls" class="carousel slide" style="background-color: black;" data-ride="carousel">
@@ -143,6 +143,7 @@
            </div>
          </div>
 </section>
+
 <!--Contacto-->
 <section id="contacto" class="container my-2 p-3">
     <h3 class="text-center text-light">Contacto</h3>
@@ -152,7 +153,7 @@
 
 <!--Footer-->
 <footer class="container-fluid bg-info py-1">
-    <section class="container my-2 bg-info text-light">
+    <div class="container my-2 bg-info text-light">
         <div class="row">
               <div class="col-6">
                  <p class="viajeschile">VIAJES CHILE</p>
@@ -165,7 +166,7 @@
                  <a href="https://www.facebook.com/"><i class="fab fa-facebook-square fa-3x"></i></a>
               </div>
         </div>
-    </section>
+      </div>
 </footer>    
 
     <!--jQuery Core 3.6.0 sin comprimir-->
