--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <!--Fontawesome-->
     <script src="https://kit.fontawesome.com/74f2762e74.js" crossorigin="anonymous"></script><link rel="shortcut icon" href="assets/img/favicon.png">
+
     <title>Viajes</title>
+    <link rel="shortcut icon" href="favicon.png">
 </head>
 <body>
 <!--Nav-->
