--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <script src="https://kit.fontawesome.com/74f2762e74.js" crossorigin="anonymous"></script><link rel="shortcut icon" href="assets/img/favicon.png">
 
     <title>Viajes</title>
-    <link rel="shortcut icon" href="favicon.png">
+    <link rel="shortcut icon" href="favicon.png sizes=16x16 32x32" type="image/png">
 </head>
 <body>
 <!--Nav-->
